--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
-    <string name="app_name">Myterio</string>
+    <string name="app_name" translatable="false">Myterio</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_search">SearchActivity</string>
-    <string name="title_activity_details">DetailsActivity</string>
+    <string name="title_activity_search" translatable="false">SearchActivity</string>
+    <string name="title_activity_details" translatable="false">DetailsActivity</string>
+    <string name="weather_not_available">Pas de prévisions pour cette ville.</string>
+    <string name="weather_get_error">Erreur lors de la récupération des prévisions</string>
 </resources>
