--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,4 +6,8 @@
     <string name="title_activity_details">DetailsActivity</string>
     <string name="weather_not_available">This location dosn\'t have any weather.</string>
     <string name="weather_get_error">Can\'t get the weather from the API.</string>
+    <string name="cancel">Cancel</string>
+    <string name="delete">Delete</string>
+    <string name="message_remove_from_favs">Do you want to delete this location ?</string>
+    <string name="title_remove_from_favs">Delete the location ?</string>
 </resources>
