--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -10,4 +10,5 @@
     <string name="delete">Delete</string>
     <string name="message_remove_from_favs">Do you want to delete this location ?</string>
     <string name="title_remove_from_favs">Delete the location ?</string>
+    <string name="country_list_error">Error while getting the countires list</string>
 </resources>
