--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Myterio</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
     <string name="title_activity_search">Search</string>
     <string name="title_activity_details">Details</string>
     <string name="weather_not_available">This location dosn\'t have any weather.</string>
@@ -11,4 +11,5 @@
     <string name="message_remove_from_favs">Do you want to delete this location ?</string>
     <string name="title_remove_from_favs">Delete the location ?</string>
     <string name="country_list_error">Error while getting the countires list</string>
+    <string name="libraries">Libraries</string>
 </resources>
