--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Myterio</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Paramètres</string>
+    <string name="action_about">à propos</string>
     <string name="title_activity_search">Rechercher</string>
     <string name="title_activity_details">Détails</string>
     <string name="weather_not_available">Pas de prévisions pour cette ville.</string>
@@ -11,4 +11,5 @@
     <string name="delete">Supprimer</string>
     <string name="cancel">Annuler</string>
     <string name="country_list_error">Erreur lors de la récupération des pays</string>
+    <string name="libraries">Librairies</string>
 </resources>
